--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
 
     body {
         margin: 0;
-        font-family: 'Open Sans', sans-serif;
+        font-family: 'Spoqa Han Sans Neo', 'sans-serif';
     }
 
     a {
@@ -172,6 +172,11 @@
         margin: auto;
     }
 
+    .section__container {
+        max-width: 1200px;
+        margin: auto;
+    }
+
     /* About */
 
     .about__majors {
@@ -230,5 +235,266 @@
 
     .job__period {
         font-size: var(--font-micro);
-        font-weight;
+        font-weight:var(--weight-regular);
     }
+
+    /* Skill */
+
+    #skills {
+        background-color: var(--color-yellow);
+    }
+
+    .skillset {
+        display: flex;
+        background-color: var(--color-light-grey);
+        color: var(--color-light-white);
+    }
+
+    .skillset__title {
+        color:var(--color-white);
+    }
+
+    .skillset__left {
+        flex-basis: 60%;
+        background-color: var(--color-dark-grey);
+        padding: 20px 40px;
+    }
+
+    .skill {
+        margin-bottom: 8px;
+    }
+
+    .skill__description {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .skill__bar {
+        width: 100%;
+        height: 3px;
+        background-color: var(--color-grey);
+    }
+
+    .skill__value {
+        height: 3px;
+        background-color: var(--color-orange);
+    }
+
+    .skillset_right {
+        flex-basis: 40%;
+    }
+
+    .tools {
+        background-color: var(--color-grey);
+    }
+
+    .tools,
+    .etc {
+        padding: 20px;
+    }
+
+    /* Work */
+
+    .work__categories {
+        margin: 40px;
+    }
+
+    .category__btn {
+        border: 1px solid var(--color-dark-white);
+        border-radius: var(--size-border-radius);
+        font-size: var(--font-regular);
+        padding: 8px 48px;
+        margin-bottom: 40px;
+    }
+
+    .category__btn .active,
+    .category__btn:hover {
+        background-color: var(--color-light-green);
+        color: var(--color-white);
+    }
+
+    .category__btn.active .category__count,
+    .category__btn:hover .category__count {
+        opacity: 1;
+        top: 0;
+    }
+
+    .category__count {
+        background-color: var(--color-orange);
+        border-radius: 50%;
+        color: var(--color-white);
+        width: 24px;
+        height: 24px;
+        line-height: 24px;
+        display: inline-block;
+        position: relative;
+        top: -20px;
+        left: 4px;
+        opacity: 0;
+        transition: all var(--anmaition-duration) ease-in ;
+    }
+
+    .work__projects {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .project {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 280px;
+        height: 250px;
+        margin: 2px;
+        background-color: var(--color-light-grey);
+    }
+
+    .project__img {
+        max-width: 100%;
+        max-height: 100%;
+        align-self: center;
+    }
+
+    .project__description {
+        position: absolute;
+        background-color: black;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        transform: translateY(10px);
+        transition: all var(--anmaition-duration) ease-in;
+    }
+
+    .project:hover .project__description {
+        opacity: 0.8;
+        transform: translateY(0px);
+    }
+
+    .project__description h3 {
+        color: var(--color-white);
+    }
+
+    .project__description h3:after {
+        content: '';
+        display:block;
+        position: relative;
+        left: 50%;
+        width: 25px;
+        height: 2px;
+        margin-left: -12px;
+        margin-top: 8px;
+        background-color: var(--color-dark-grey);
+    }
+
+    /* Review */
+
+    #review {
+        background-color: var(--color-light-white);
+    }
+
+    .testimonials {
+        margin: 40px;
+    }
+
+    .testimonial {
+        display: flex;
+        margin: 32px 0;
+    }
+
+    .testimonial__avatar {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+    }
+
+    .testimonial__avatar:nth-child(odd) {
+        margin-right: 40px;
+    }
+    
+    .testimonial__avatar:nth-child(even) {
+        margin-left: 40px;
+    }
+
+    .testimonial__speech-bubble {
+        padding: 18px;
+        background-color: var(--color-white);
+        border-radius: var(--size-border-radius);
+    }
+
+    .testimonial__speech-bubble p {
+        color: var(--color-light-grey);
+    }
+
+    .testimonial__speech-bubble a {
+        color: var(--color-green);
+        font-weight: var(--weight-semi-bold);
+    }
+
+    /* Contact */
+
+    #contact {
+        background-color: var(--color-green);
+    }
+
+    #contact svg > image{
+        font-size: var(--font-small);
+    }
+
+    .contact__title,
+    .contact__email,
+    .contact__rights {
+        color: var(--color-white);
+    }
+
+    .contact__title {
+        margin: 32px 0;
+    }
+
+    .contact__links {
+        font-size: var(--font-small);
+        margin: 24px 0;
+    }
+
+    .conatact__links a:hover {
+        transform: scale(1.2);
+    }
+
+    .contact__links-messenger {
+        width: 40px;
+        height:40px;
+        margin-top: 10px;
+    }
+
+    .contact__links-messenger {
+        width: 40px;
+        height:40px;
+    }
+    .contact__links a:hover {
+        font-size: var(--font-medium);
+        color: var(--color-yellow);
+        transition: all var(--anmaition-duration) ease-in;
+    }
+
+    .contact__links-messenger:hover {
+        transform: scale(1.3);
+        transition: all var(--anmaition-duration) ease-in;
+    }
+
+    .contact__rights a {
+        text-decoration: underline;
+    }
+    
+    .contact__rights a:hover {
+        transform: scale(1.1);
+        color: var(--color-yellow);
+        transition: all var(--anmaition-duration) ease-in;
+    }
+    
+    
