--- a/style.css
+++ b/style.css
@@ -133,6 +133,15 @@
         border-radius: 4px;
     }
 
+    .navbar__toggle-btn {
+        position: absolute;
+        top: 15px;
+        right: 32px;
+        font-size: 24px;
+        color: var(--color-white);
+        display: none;
+    }
+
     /* Home */
 
     #home {
@@ -487,6 +496,9 @@
         transition: all var(--anmaition-duration) ease-in;
     }
 
+    .contact__rights {
+        font-size: var(--font-micro);
+    }
     .contact__rights a {
         text-decoration: underline;
     }
@@ -497,4 +509,40 @@
         transition: all var(--anmaition-duration) ease-in;
     }
     
-    
+    @media screen and (max-width: 768px) {
+        .navbar__toggle-btn {
+            display: block;
+        }
+        #navbar {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .navbar__menu {
+            flex-direction: column;
+            text-align: center;
+            width: 100%;
+            display: none;
+        }
+
+        .about__majors {
+            flex-direction: column;
+        }
+
+        .major {
+            margin-bottom: 32px;
+        }
+
+        .skillset {
+            flex-direction: column;
+        }
+
+        .project {
+            flex-grow: 1;
+        }
+
+        .testimonial__avatar {
+            width: 80px;
+            height: 80px;
+        }
+    }
