--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     --size-border-radius: 4px;
 
     /* Animation */
-    --anmaition-duration: all 300ms ease;
+    --anmaition-duration: all 300ms;
     
 }
 
@@ -52,8 +52,7 @@
     }
 
     ul {
-        list-style: none;
-        padding: 0;
+        padding-left: 0;
     }
 
     li {
@@ -86,6 +85,7 @@
     h3 {
         font-size: var(--font-regular);
         font-weight: var(--color-black);
+        color: var(--color-black);
         margin: 8px 0;
     }
 
@@ -98,14 +98,18 @@
 
     /* Navvar */
     #navbar {
+        position: fixed;
+        width: 100%;
         display: flex;
         justify-content: space-between;
-        background-color: var(--color-green);
         align-items: center;
-        color:var(--color-white);
         padding: 16px;
-        max-width: 1200px;
-        margin: auto;
+        background-color: transparent;        
+    }
+
+    #navbar.navbar__dark {
+        background-color: var(--color-green);       
+        z-index: 1;
     }
 
     .navbar__menu {
@@ -114,28 +118,31 @@
 
     .navbar__logo {
         font-size: var(--font-small);
-        font-weight: (--weight-semi-bold);
+        font-weight: var(--weight-semi-bold);
+        color: var(--color-white);
     }
 
     .navbar__menu__item {
         padding: 8px 12px;
         margin: 0 4px;
-        cursor: pointer;
+        color: var(--color-white);
         border-radius: var(--size-border-radius);
+        cursor: pointer;
     }
 
     .navbar__menu__item.active{
         border: 1px solid var(--color-white);
+        border-radius: var(--size-border-radius);
     }
 
     .navbar__menu__item:hover {
         background-color: var(--color-light-green);
         border-radius: 4px;
+        color: var(--color-white);
     }
 
     .navbar__toggle-btn {
         position: absolute;
-        top: 15px;
         right: 32px;
         font-size: 24px;
         color: var(--color-white);
@@ -147,6 +154,7 @@
     #home {
         background:url('img/Background2.png') center/cover no-repeat;
         padding: 40px;
+        padding-top: 120px;
         text-align: center;
     }
 
@@ -177,7 +185,6 @@
     .section {
         padding: 50px;
         text-align: center;
-        max-width: 1200px;
         margin: auto;
     }
 
@@ -302,9 +309,9 @@
         padding: 20px;
     }
 
-    /* Work */
+    /* Gallery */
 
-    .work__categories {
+    .gallery__categories {
         margin: 40px;
     }
 
@@ -343,7 +350,7 @@
         transition: all var(--anmaition-duration) ease-in ;
     }
 
-    .work__projects {
+    .gallery__projects {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -513,6 +520,7 @@
         .navbar__toggle-btn {
             display: block;
         }
+
         #navbar {
             flex-direction: column;
             align-items: flex-start;
