--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,10 @@
         text-align: center;
         font-size: 48px;
     }
+
+    .video {
+        width: 100%;
+    }
   
     /* .youtube {
         background-color: #333;
@@ -579,6 +583,9 @@
 
     .contact__title,
     .contact__email,
+
+
+
     .contact__rights {
         color: var(--color-white);
     }
@@ -755,7 +762,10 @@
             width: 100%;
             height: 0%;
         }
-
+        .jb__box-cover{
+            width: 100%;
+            height: 100%;
+        }
         .video {
             width: 100%;
         }
