--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@
     }
 
     h2{
-        font-size: var(--font-medium);
+        font-size: 40px;
         font-weight: var(--weight-semi-bold);
         color: var(--color-black);
         margin: 8px 0;
@@ -204,7 +204,8 @@
     /* About */
 
     #about.section {
-        margin-top: 20px;
+        margin-top: 0px;
+        padding-bottom: 100px;
     }
 
     .about__majors {
@@ -212,6 +213,7 @@
         justify-content: space-around;
         margin: 0;
         padding: 0 60px 0 60px;
+        margin-bottom: 60px;
     }
 
     .major__icon {
@@ -224,7 +226,7 @@
         border: 1px solid var(--color-blue);
         border-radius: 50%;
         margin-top: 50px;
-        margin-bottom: 16px;
+        margin-bottom: 50px;
     }
 
     .major__icon i {
@@ -232,26 +234,91 @@
     }
 
     .major__icon:hover i {
-        color: var(--color-green);
+        color: var(--color-green);        
         transform: rotate(-30deg) scale(1.1);
     }
 
-    .major__title, .major__description {
-        color: var(--color-dark-grey);
+    .major__title {
+        color: var(--color-green);
     }
 
     .major__description {
-        font-size: var(--color-dark-grey);
+        margin-top: 10px;
+        color: var(--color-light-grey);
+        font-size: var(--font-micro);
     }
 
-    .job {
+    .golf__Info {
         display: flex;
+        flex-direction: column;
         align-items: center;
     }
 
+    .golf__Info h2 {
+        color: var(--color-green);
+    }
+
+    .golf__Info h3 {
+        color: #477456;
+        font-weight:var(--weight-semi-bold);
+        font-size: var(--font-regular);
+        margin-top: 40px;
+    }
+
+    .golf__logo {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 1200px;
+        justify-content: space-between;
+        flex-direction: row;
+        margin-top: 30px;
+        padding: 0 60px 0 60px;
+    }
+
+    .golf__logo p {
+        color: var(--color-light-grey);
+        font-size: var(--font-micro);
+    }
+
+    .golf__logo img {
+        background-color: var(--color-light-grey);
+        width: 150px;
+        height: 50px;
+        border-radius: 50%;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .cc__info {
+        margin: 30px;
+        padding: 0;
+    }
+
+    /* .job {
+        display: flex;
+        align-items: center;
+        padding-right: 200px;
+    }
+
+    .job h2 {
+        color:#467054; 
+        font-size: 25px;
+    }
+
     .job__description {
-        margin: 0 16px;
-        text-align: left;
+        position: relative;
+        display: block;
+        justify-content: space-between;
+        margin-top: 20px;
+        margin-bottom: 0;
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 0;
+        align-items: left;
+    }
+
+    .job__description p {
+        margin-bottom: 20px;
     }
 
     .job__name,
@@ -266,11 +333,11 @@
 
     .job__period {
         font-size: var(--font-micro);
-    }
+    } */
     
 
-   
     /* Video */
+    
     .jb__box {
         position: relative;
         height: 700px;
@@ -301,49 +368,9 @@
     }
 
     .video {
+        margin-top: 0;
         width: 100%;
     }
-  
-    /* .youtube {
-        background-color: #333;
-        position: relative;
-        height: 700px;
-        overflow: hidden;
-    }
-
-    #player {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        z-index: 1;
-    }
-
-    .youtube .youtube__area {
-        width: 1920px;
-        position: absolute;
-        left: 50%;
-        margin-left: calc( 1920px / -2);
-        top: 50%;
-        margin-top: calc(1902px * 9 / 16 / -2);
-    }
-
-    .youtube .youtube__area::before {
-        content: '';
-        display: block;
-        width: 100%;
-        height: 0;
-        padding-top: 56.25%;
-    }
-
-    .youtube .youtube__cover{
-        background-image: url("../Thaigolf/img/video_cover_pattern.png");
-        background-color: rgba(0,0,0,.3);
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    } */
 
     /* Skills */
 
@@ -366,7 +393,10 @@
     }
 
     #skills.section {
-        padding: 10px;
+        height: 70px;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding: 0px;
     }
 
     .skillset {
@@ -378,44 +408,6 @@
     .skillset__title {
         color:var(--color-white);
     } 
-   /* .skillset__left {
-        flex-basis: 60%;
-        background-color: var(--color-dark-grey);
-        padding: 20px 40px;
-    }
-
-    .skill {
-        margin-bottom: 8px;
-    }
-
-    .skill__description {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .skill__bar {
-        width: 100%;
-        height: 3px;
-        background-color: var(--color-grey);
-    }
-
-    .skill__value {
-        height: 3px;
-        background-color: var(--color-orange);
-    }
-
-    .skillset_right {
-        flex-basis: 40%;
-    }
-
-    .tools {
-        background-color: var(--color-grey);
-    }
-
-    .tools,
-    .etc {
-        padding: 20px;
-    } */
 
     /* Gallery */
 
@@ -577,16 +569,25 @@
         background-color: var(--color-green);
     }
 
+    #contact.section {
+        padding: 10px;
+    }
     #contact svg > image{
         font-size: var(--font-small);
     }
 
-    .contact__title,
-    .contact__email,
+    h2.contact__title {
+        font-size: 40px;
+        color: var(--color-white);
+        margin: 0;
+    }
 
-
-
+    h3.contact__email {
+        margin: 0;
+    }
+    .contact__email, 
     .contact__rights {
+        font-size: var(--font-small);
         color: var(--color-white);
     }
 
@@ -596,7 +597,7 @@
 
     .contact__links {
         font-size: var(--font-small);
-        margin: 24px 0;
+        margin: 10px 0;
     }
 
     .conatact__links a:hover {
@@ -668,6 +669,22 @@
         --font-small: 14px;
         --font-micro: 12px;
         }
+        
+        p span {
+            font-size: var(--font-micro);
+            font-weight: var(--weight-regular);
+            color: var(--color-black);
+            margin: 4px 0;
+        }
+
+        body {
+            margin: 0;
+        }
+
+        h2 {
+            font-size: var(--font-regular);
+        }
+
         .navbar__toggle-btn {
             display: block;
             top: 16px;
@@ -710,6 +727,16 @@
 
         .major {
             margin-bottom: 0;
+            margin-top: 10px;
+        }
+
+        .major__icon {
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+
+        .golf__Info {
+            display: none;
         }
         
         .skillset {
