--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,10 @@
         padding-bottom: 100px;
     }
 
+    #about span {
+        font-size: var(--font-micro);
+    }
+
     .about__majors {
         display: flex;
         justify-content: space-around;
@@ -503,11 +507,11 @@
         transform: translateY(0px);
     }
 
-    .project__description h3 {
+    .project__description p {
         color: var(--color-orange);
     }
 
-    .project__description h3:after {
+    .project__description p:after {
         content: '';
         display:block;
         position: relative;
