--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,29 @@
         margin: 4px 0;
     }
 
+    /* Popup */
+    .popup {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: rgba(0, 0, 0, 0.8);
+        z-index: 9999;
+    }
+    
+    .popup img {
+        display: block;
+        max-width: 100%;
+        max-height: 100%;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+    
+    .popup.active {
+        display: flex;
+    }
+
     /* Navvar */
     #navbar {
         position: fixed;
